# Atelier_CMAKE

./: CMakeLists.txt
.github/workflows/: tests.yml
src/: CMakeLists.txt  main.c
